--- a/Deploy/helm/web/templates/configmap.yaml
+++ b/Deploy/helm/web/templates/configmap.yaml
@@ -14,8 +14,8 @@ data:
   APPINSIGHTS_INSTRUMENTATIONKEY: {{ .Values.inf.appinsights.id | default "none" }}
   ApiUrl:  {{.Values.ingress.protocol}}://{{ $apihost }}{{ .Values.inf.ingress.webbff.path }}/v1
   ApiUrlShoppingCart: {{.Values.ingress.protocol}}://{{ $apihost }}{{ .Values.inf.ingress.cart.path }}  
-  UseB2C: {{ .Values.B2C.UseB2C | quote }}
-  REACT_APP_USE_B2C: {{ .Values.B2C.ReactAppUseB2C | quote }}
-  B2CAuth__ClientId: {{ .Values.B2C.ClientId | default "none" }} 
-  B2CAuth__Authority: {{ .Values.B2C.Authority | default "none" }}
-  B2CAuth__Scopes: {{ .Values.B2C.Scopes | default "none" }}
+  UseB2C: false #{{ .Values.B2C.UseB2C | quote }}
+  #REACT_APP_USE_B2C: {{ .Values.B2C.ReactAppUseB2C | quote }}
+  #B2CAuth__ClientId: {{ .Values.B2C.ClientId | default "none" }} 
+  #B2CAuth__Authority: {{ .Values.B2C.Authority | default "none" }}
+  #B2CAuth__Scopes: {{ .Values.B2C.Scopes | default "none" }}
