--- a/Source/Tailwind.Traders.Web/Tailwind.Traders.Web.csproj
+++ b/Source/Tailwind.Traders.Web/Tailwind.Traders.Web.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="12.1.2" />
     <PackageReference Include="Dapper" Version="2.0.30" />
+    <PackageReference Include="HeaderPropagation" Version="3.0.2" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.5.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
